--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minion Translator</title>   
+    <link href="style.css" rel="stylesheet"/>
 </head>
-<body>
+<body  >
+  <nav class='navigation'>
+    <div class='nav-brand'>Bella Minion! </div>
+      <h3>English to Minion language Translator</h3>
+  <ul class='list-non-bullet nav-pills'>
+  
+      <li class="list-item-inline">
+          <a class="link link-active" href='instructions.html'>How To Use</a>
+      </li>
+  </ul>
+
+</nav>
+
+
+  <textarea class="textArea" placeholder="Enter your text in english and press translate"></textarea>
+
   <button id="btn-translate">Translate</button>
+  <div id="output"></div>
+
 </body>
+ <footer class="footer">
+    <div class="footer-container">Connect Socially</div>
+    <ul class="list-non-bullet">
+        <li class='list-item-inline'>
+            <a class="link" target='_blank' href='https://www.instagram.com/__pvr__/'>Instagram</a>
+        </li>
+        <li class='list-item-inline'>
+            <a class="link" target='_blank' href='https://www.linkedin.com/in/pavan-vineethreddy-0a5b59118/'>LinkedIn</a>
+        </li>
+        <li class='list-item-inline'>
+            <a class="link" target='_blank' href='https://twitter.com/home'>Twitter</a>
+        </li>
+        <li class='list-item-inline'>
+            <a class="link" target='_blank' href='https://github.com/vineeth-t'>Github</a>
+        </li>
+    </ul>
+    <h6>Made with ERN🍌</h6>
+</footer>
 <script type="text/javascript" src="banana.js"></script>
 </html>
